added bench handler and bumped versions of Aleph and Lamina